<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.signup.SignUpStepFourActivity"
    android:background="#F9F9F9">

        <ImageView
            android:id="@+id/img_seta"
            android:layout_width="34dp"
            android:layout_height="36dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_four_title_text"
            android:textColor="@color/grey_9"
            android:fontFamily="@font/circular_std_medium"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_seta"
            app:layout_constraintTop_toBottomOf="@id/img_seta" />

        <TextView
            android:id="@+id/txt_description_lgpd"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:text="@string/register_four_safedata_text"
            android:fontFamily="@font/circular_std_medium"
            android:textColor="@color/grey_9"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:layout_constraintStart_toEndOf="@id/img_seta"
            />

        <CheckBox
            android:id="@+id/checkbox_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:textColor="@color/grey_9"
            android:textSize="18sp"
            android:text="@string/register_four_news_text"
            android:fontFamily="@font/circular_std_medium"
            app:layout_constraintTop_toBottomOf="@id/txt_description_lgpd"
            app:layout_constraintStart_toEndOf="@id/img_seta"
            />

        <CheckBox android:id="@+id/checkbox_lgpdcheckbox_lgpd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/checkbox_email"
            app:layout_constraintStart_toEndOf="@id/img_seta"/>

        <TextView
            android:id="@+id/tv_text_lgpd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_9"
            android:textSize="18sp"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/register_four_terms_text"
            app:layout_constraintStart_toEndOf="@id/checkbox_lgpdcheckbox_lgpd"
            app:layout_constraintTop_toBottomOf="@id/checkbox_email"
            android:layout_marginTop="30dp" />


        <Button
            android:id="@+id/btn_finish"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_disable"
            android:elevation="4dp"
            android:text="@string/register_four_final_button"
            android:fontFamily="@font/circular_std_medium"
            android:textAllCaps="false"
            android:textColor="@color/grey_7"
            android:textSize="18sp"
            android:enabled="false"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_loading_signup"
            android:visibility="gone"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:layout_marginBottom="20dp"
            android:elevation="4dp"
            android:background="@drawable/button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>